--- a/index.html
+++ b/index.html
@@ -12,25 +12,28 @@
         
         <div id="form">
         
-            <input id="form-name" type="text" name="name" >
+            <input id="form--name" type="text" name="name" value="Your name" >
 
-            <input id="form-length" type="text" name="length">
+            <input id="form--length" type="text" name="length" value="00:00">
 
-            <select id="form-category" name="category">
-                <option value="work">work</option>
+            <select id="form--category" name="category">
+                <option value="work" selected>work</option>
                 <option value="study">study</option>
                 <option value="meditate">meditation</option>
                 <option value="pray">pray</option>
                 <option value="read">read</option>
             </select>
 
-            <input id="form-recurrent" type="checkbox" name="recurrent">
+            <label>Recurrent:</label>
+            <input id="form--recurrent" type="checkbox" name="recurrent">
 
-            <input id="form-kind" type="radio" name="kind">
+            <label>Recurrent:</label>
+            <input id="form--work" type="radio" name="kind">
+            <input id="form--rest" type="radio" name="kind">
 
-            <button id="form-submit" type="submit" name="submit">
-            <button id="form-edit" type="" name="edit">
-            <button id="form-delete" type="delete">
+            <button id="form--submit" type="submit" name="submit">submit</button>
+            <button id="form--edit" type="" name="edit">edit</button>
+            <button id="form--delete" type="delete">delete</button>
 
 
         </div>
